apps/lite/ui/src/routes/project/$id/workspace/route.module.css
.changes {
	min-height: 80px;
}

.unassignedChangesLane {
	display: flex;
	flex-shrink: 0;
	flex-direction: column;
	width: 300px;
}

.unassignedChanges {
	border: 1px dotted var(--color-separator);
}

.stackLane {
	flex-shrink: 0;
	width: 350px;
}

.headInfo {
	display: flex;
	row-gap: 24px;
	flex-direction: column;
}

.stackLanes {
	display: flex;
	column-gap: 8px;
}

.emptyLane {
	flex-shrink: 0;
	width: 300px;
}

.assignedChanges {
	border: 1px dotted var(--color-separator);
}

.segments {
	display: flex;
	row-gap: 24px;
	flex-direction: column;
}

.segmentButton {
	flex-grow: 1;
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);
	overflow: hidden;
	font-weight: bold;
	line-height: var(--row-line-height);
	text-overflow: ellipsis;
	white-space: nowrap;
}

.renameBranchInput {
	font-weight: bold;
}

.commit {
	display: flex;
	position: relative;
	flex-direction: column;
}

.commitInsertionTarget {
	--indicator-height: 3px;

	position: absolute;
	height: var(--indicator-height);
	inset-inline: 0;
	background-color: var(--color-move-indicator);
	pointer-events: none;
}

.commitInsertionTargetAbove {
	top: 0;
	transform: translateY(calc(var(--indicator-height) / -2));
}

.commitInsertionTargetBelow {
	bottom: 0;
	transform: translateY(calc(var(--indicator-height) / 2));
}

.activeTarget {
	outline: 2px dashed var(--color-active-operation-subject-outline);
}

.stack {
	display: flex;
	row-gap: 24px;
	flex-direction: column;
}

.stackHeader {
	display: flex;
	flex-direction: column;
}

.stackActions {
	display: flex;
	column-gap: 8px;
	align-items: center;
}

.stackMenuTrigger {
	display: grid;
	margin-left: auto;
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);

	svg {
		width: var(--row-line-height);
		height: var(--row-line-height);
	}

	&:hover,
	&[aria-expanded="true"] {
		background-color: var(--color-button-hover-bg);
	}
}

.commonBaseCommitContainer {
	display: flex;
	flex-grow: 1;
	flex-direction: column;
	align-items: center;
}

.commonBaseCommit {
	padding-inline: var(--row-inline-padding);
	padding-block: var(--row-block-padding);
	line-height: var(--row-line-height);
}

.editorForm {
	display: flex;
	row-gap: var(--row-block-padding);
	flex-grow: 1;
	flex-direction: column;
	padding-block: var(--row-block-padding);
	line-height: var(--row-line-height);
}

.editorInput {
	flex-grow: 1;
	padding-inline: var(--row-inline-padding);

	&:focus {
		outline: none;
	}
}

.editorHelp {
	padding-inline: var(--row-inline-padding);
	color: var(--color-text-secondary-inverse);
	font-size: 11px;
	line-height: 1.3;
}

.editorShortcut {
	color: var(--color-item-row-selected-fg);
	font-family: monospace;
}

.editCommitMessageInput {
	field-sizing: content;
	box-sizing: content-box;
	min-height: calc(2lh);
	resize: none;
}

.activeSource {
	outline: 2px solid var(--color-active-operation-subject-outline);
	opacity: 0.4;
}

.commitModePreview {
	display: flex;
	z-index: 1;
	/* Relative to panel */
	position: absolute;
	bottom: var(--panel-padding);
	left: 50%;
	column-gap: 8px;
	align-items: center;
	max-width: 500px;
	padding: 8px;
	transform: translateX(-50%);
	border: 1px solid light-dark(rgb(0 0 0 / 0.2), rgb(255 255 255 / 0.16));
	border-radius: 8px;
	background-color: var(--color-bg);
	box-shadow: 0 12px 16px -8px light-dark(rgb(0 0 0 / 0.08), rgb(0 0 0 / 0.4));
}

